feat: implement register endpoint
