# backend/internal/auth/dto.go
@@ -1,0 +1,8 @@
+package auth
+
+type RegisterUserDTO struct {
+	Name        *string `json:"name"`
+	Email       string  `json:"email"`
+	PhoneNumber *string `json:"phone_number"`
+	Password    string  `json:"password"`
+}
