# backend/internal/auth/model.go
@@ -1,0 +1,8 @@
+package auth
+
+type RegisterUserParams struct {
+	Name         *string
+	Email        string
+	PhoneNumber  *string
+	PasswordHash string
+}
